--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <title>My Site Title</title>
 
   </head>
   <body>
-
+<!-- This is a comment! -->
   </body>
 </html>
